# urdf_seminar

./: CMakeLists.txt  README.md  package.xml
config/: crane_plus.rviz  crane_plus_controllers.yaml  gui.config
launch/: crane_plus_gazebo.launch.py  crane_plus_rviz.launch.py
urdf/: crane_plus.gazebo.xacro  crane_plus.gazebo_ros2_control.xacro  crane_plus.urdf.xacro  crane_plus.xacro
worlds/: table.sdf
